Update: Health Insurance replaces Medicare, Revolut replaces Wise, YouTube link, state transport cards, and content polish

--- a/index.html
+++ b/index.html
@@ -192,12 +192,22 @@
         <div class="glass rounded-2xl shadow-lg p-6 flex flex-col items-center hover:shadow-2xl transition-shadow duration-300 hover:scale-105 pop-in">
           <svg width="48" height="48" fill="none" viewBox="0 0 24 24"><rect x="3" y="7" width="18" height="10" rx="2" stroke="#FF9900" stroke-width="2"/><path d="M7 17v2a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2v-2" stroke="#FF9900" stroke-width="2"/></svg>
           <h3 class="text-xl font-semibold text-blue-200 mb-2">Transport Card</h3>
-          <p class="text-blue-100 text-center">Travel on public transport hassle-free.</p>
+          <p class="text-blue-100 text-center mb-2">Travel on public transport hassle-free.</p>
+          <ul class="text-blue-100 text-sm text-left space-y-1">
+            <li><a href="https://transportnsw.info/tickets-opal/opal" target="_blank" class="text-yellow-400 hover:underline font-semibold">NSW (Sydney, Newcastle, etc.) → Opal Card</a></li>
+            <li><a href="https://www.ptv.vic.gov.au/tickets/myki/" target="_blank" class="text-yellow-400 hover:underline font-semibold">VIC (Melbourne) → Myki Card</a></li>
+            <li><a href="https://translink.com.au/tickets-and-fares/go-card" target="_blank" class="text-yellow-400 hover:underline font-semibold">QLD (Brisbane, Gold Coast, Sunshine Coast) → Go Card</a></li>
+            <li><a href="https://www.adelaidemetro.com.au/Tickets-Fares/MetroCARD" target="_blank" class="text-yellow-400 hover:underline font-semibold">SA (Adelaide) → MetroCARD</a></li>
+            <li><a href="https://www.transperth.wa.gov.au/smartrider" target="_blank" class="text-yellow-400 hover:underline font-semibold">WA (Perth) → SmartRider</a></li>
+            <li><a href="https://www.metrotas.com.au/fares/greencard/" target="_blank" class="text-yellow-400 hover:underline font-semibold">TAS (Hobart, Launceston) → Greencard</a></li>
+            <li><a href="https://www.transport.act.gov.au/tickets-and-myway/myway-cards" target="_blank" class="text-yellow-400 hover:underline font-semibold">ACT (Canberra) → MyWay Card</a></li>
+            <li><a href="https://nt.gov.au/driving/public-transport-cycling/bus-tickets-and-fares/tap-and-ride" target="_blank" class="text-yellow-400 hover:underline font-semibold">NT (Darwin) → Tap and Ride</a></li>
+          </ul>
         </div>
         <div class="glass rounded-2xl shadow-lg p-6 flex flex-col items-center hover:shadow-2xl transition-shadow duration-300 hover:scale-105 pop-in">
           <svg width="48" height="48" fill="none" viewBox="0 0 24 24"><circle cx="12" cy="12" r="8" stroke="#FF9900" stroke-width="2"/><path d="M12 8v4l3 3" stroke="#FF9900" stroke-width="2"/></svg>
-          <h3 class="text-xl font-semibold text-blue-200 mb-2">Medicare Guide</h3>
-          <p class="text-blue-100 text-center">Step-by-step Medicare setup.</p>
+          <h3 class="text-xl font-semibold text-blue-200 mb-2">Health Insurance Guide</h3>
+          <p class="text-blue-100 text-center">Step-by-step health insurance setup.</p>
         </div>
         <div class="glass rounded-2xl shadow-lg p-6 flex flex-col items-center hover:shadow-2xl transition-shadow duration-300 hover:scale-105 pop-in">
           <svg width="48" height="48" fill="none" viewBox="0 0 24 24"><rect x="4" y="8" width="16" height="8" rx="2" stroke="#FF9900" stroke-width="2"/><rect x="8" y="12" width="8" height="2" rx="1" fill="#FF9900"/></svg>
@@ -217,7 +227,7 @@
         <div class="glass rounded-2xl shadow-lg p-6 flex flex-col space-y-3 hover:shadow-2xl transition-shadow duration-300 hover:scale-105 pop-in">
           <h3 class="text-xl font-semibold text-blue-200">Bank Account Setup</h3>
           <p class="text-blue-100">Step-by-step guide to opening your first bank account in Australia.</p>
-          <a href="https://wise.com/invite/u/dineshdigbijay" target="_blank" rel="noopener noreferrer" class="text-yellow-400 hover:underline font-semibold">Get started with Wise (affiliate)</a>
+          <a href="https://www.revolut.com/en-AU/" target="_blank" rel="noopener noreferrer" class="text-yellow-400 hover:underline font-semibold">Get started with Revolut</a>
         </div>
         <div class="glass rounded-2xl shadow-lg p-6 flex flex-col space-y-3 hover:shadow-2xl transition-shadow duration-300 hover:scale-105 pop-in">
           <h3 class="text-xl font-semibold text-blue-200">SIM Activation</h3>
@@ -236,9 +246,9 @@
           <a href="https://www.ato.gov.au/Individuals/Tax-file-number/Apply-for-a-TFN/" target="_blank" rel="noopener noreferrer" class="text-yellow-400 hover:underline font-semibold">Apply for TFN</a>
         </div>
         <div class="glass rounded-2xl shadow-lg p-6 flex flex-col space-y-3 hover:shadow-2xl transition-shadow duration-300 hover:scale-105 pop-in">
-          <h3 class="text-xl font-semibold text-blue-200">Medicare Setup</h3>
+          <h3 class="text-xl font-semibold text-blue-200">Health Insurance Setup</h3>
           <p class="text-blue-100">Get access to Australia’s healthcare system.</p>
-          <a href="https://www.servicesaustralia.gov.au/medicare-card" target="_blank" rel="noopener noreferrer" class="text-yellow-400 hover:underline font-semibold">Medicare Info</a>
+          <a href="https://www.privatehealth.gov.au/" target="_blank" rel="noopener noreferrer" class="text-yellow-400 hover:underline font-semibold">Health Insurance Info</a>
         </div>
       </div>
       <div class="mt-12 text-center">
@@ -264,6 +274,9 @@
         </a>
         <a href="https://tiktok.com/@goeazeau" target="_blank" rel="noopener noreferrer" class="text-yellow-400 hover:text-blue-400 text-2xl">
           <svg class="w-7 h-7" fill="currentColor" viewBox="0 0 24 24"><path d="M12.5 2h2.25a.75.75 0 0 1 .75.75v2.5a.75.75 0 0 0 .75.75h2.5a.75.75 0 0 1 .75.75v2.25a7.25 7.25 0 1 1-7.25-7.25z"/></svg>
+        </a>
+        <a href="https://www.youtube.com/@GoEasey" target="_blank" rel="noopener noreferrer" class="text-yellow-400 hover:text-blue-400 text-2xl">
+          <svg class="w-7 h-7" fill="currentColor" viewBox="0 0 24 24"><path d="M23.498 6.186a2.994 2.994 0 0 0-2.107-2.12C19.228 3.5 12 3.5 12 3.5s-7.228 0-9.391.566A2.994 2.994 0 0 0 .502 6.186C0 8.36 0 12 0 12s0 3.64.502 5.814a2.994 2.994 0 0 0 2.107 2.12C4.772 20.5 12 20.5 12 20.5s7.228 0 9.391-.566a2.994 2.994 0 0 0 2.107-2.12C24 15.64 24 12 24 12s0-3.64-.502-5.814zM9.545 15.568V8.432L15.818 12l-6.273 3.568z"/></svg>
         </a>
       </div>
     </section>
