--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
         <img src="https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=400&q=80" alt="Founder" class="w-32 h-32 rounded-full border-4 border-blue-800 mb-4 md:mb-0 glass pop-in" />
         <div>
           <h3 class="text-xl font-semibold text-blue-200 mb-2 brand-heading">My Story</h3>
-          <p class="text-blue-200">Hi, I’m Dinesh, the founder of GoEasey. As a former international student, I know how overwhelming Day 1 in Australia can be. I created GoEasey to help you feel at home, faster.</p>
+          <p class="text-blue-200">Hi, I’m Dinesh, the founder of GoEasey. As a former international student, I know how overwhelming Day 1 in Australia can be. I created GoEasey to help you feel at home, faster.<br><br>Coming from Nepal, I faced the same confusion and excitement as many new students. I wanted to make the journey easier for others by providing a kit that covers the real needs of students from Day 1. My motivation is to help you skip the stress, settle in quickly, and focus on your dreams. If I could do it, so can you—let’s make your Aussie adventure smooth and memorable!</p>
         </div>
       </div>
     </section>
@@ -189,20 +189,10 @@
           <h3 class="text-xl font-semibold text-blue-200 mb-2">$25 Westfield Gift Card</h3>
           <p class="text-blue-100 text-center">Shop at Australia’s top malls.</p>
         </div>
-        <div class="glass rounded-2xl shadow-lg p-6 flex flex-col items-center hover:shadow-2xl transition-shadow duration-300 hover:scale-105 pop-in">
+        <div class="glass rounded-2xl shadow-lg p-6 flex flex-col items-center hover:shadow-2xl transition-shadow duration-300 hover:scale-105 pop-in cursor-pointer" id="transportCardBtn">
           <svg width="48" height="48" fill="none" viewBox="0 0 24 24"><rect x="3" y="7" width="18" height="10" rx="2" stroke="#FF9900" stroke-width="2"/><path d="M7 17v2a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2v-2" stroke="#FF9900" stroke-width="2"/></svg>
           <h3 class="text-xl font-semibold text-blue-200 mb-2">Transport Card</h3>
-          <p class="text-blue-100 text-center mb-2">Travel on public transport hassle-free.</p>
-          <ul class="text-blue-100 text-sm text-left space-y-1">
-            <li><a href="https://transportnsw.info/tickets-opal/opal" target="_blank" class="text-yellow-400 hover:underline font-semibold">NSW (Sydney, Newcastle, etc.) → Opal Card</a></li>
-            <li><a href="https://www.ptv.vic.gov.au/tickets/myki/" target="_blank" class="text-yellow-400 hover:underline font-semibold">VIC (Melbourne) → Myki Card</a></li>
-            <li><a href="https://translink.com.au/tickets-and-fares/go-card" target="_blank" class="text-yellow-400 hover:underline font-semibold">QLD (Brisbane, Gold Coast, Sunshine Coast) → Go Card</a></li>
-            <li><a href="https://www.adelaidemetro.com.au/Tickets-Fares/MetroCARD" target="_blank" class="text-yellow-400 hover:underline font-semibold">SA (Adelaide) → MetroCARD</a></li>
-            <li><a href="https://www.transperth.wa.gov.au/smartrider" target="_blank" class="text-yellow-400 hover:underline font-semibold">WA (Perth) → SmartRider</a></li>
-            <li><a href="https://www.metrotas.com.au/fares/greencard/" target="_blank" class="text-yellow-400 hover:underline font-semibold">TAS (Hobart, Launceston) → Greencard</a></li>
-            <li><a href="https://www.transport.act.gov.au/tickets-and-myway/myway-cards" target="_blank" class="text-yellow-400 hover:underline font-semibold">ACT (Canberra) → MyWay Card</a></li>
-            <li><a href="https://nt.gov.au/driving/public-transport-cycling/bus-tickets-and-fares/tap-and-ride" target="_blank" class="text-yellow-400 hover:underline font-semibold">NT (Darwin) → Tap and Ride</a></li>
-          </ul>
+          <p class="text-blue-100 text-center mb-2">Travel on public transport hassle-free.<br><span class="text-yellow-400 underline text-sm">View all state cards</span></p>
         </div>
         <div class="glass rounded-2xl shadow-lg p-6 flex flex-col items-center hover:shadow-2xl transition-shadow duration-300 hover:scale-105 pop-in">
           <svg width="48" height="48" fill="none" viewBox="0 0 24 24"><circle cx="12" cy="12" r="8" stroke="#FF9900" stroke-width="2"/><path d="M12 8v4l3 3" stroke="#FF9900" stroke-width="2"/></svg>
@@ -248,7 +238,7 @@
         <div class="glass rounded-2xl shadow-lg p-6 flex flex-col space-y-3 hover:shadow-2xl transition-shadow duration-300 hover:scale-105 pop-in">
           <h3 class="text-xl font-semibold text-blue-200">Health Insurance Setup</h3>
           <p class="text-blue-100">Get access to Australia’s healthcare system.</p>
-          <a href="https://www.privatehealth.gov.au/" target="_blank" rel="noopener noreferrer" class="text-yellow-400 hover:underline font-semibold">Health Insurance Info</a>
+          <a href="https://www.studyaustralia.gov.au/en/plan-your-move/overseas-student-health-cover-oshc" target="_blank" rel="noopener noreferrer" class="text-yellow-400 hover:underline font-semibold">Health Insurance Info (OSHC)</a>
         </div>
       </div>
       <div class="mt-12 text-center">
@@ -269,10 +259,10 @@
         </button>
       </form>
       <div class="flex justify-center space-x-6 mt-8">
-        <a href="https://instagram.com/goeazeau" target="_blank" rel="noopener noreferrer" class="text-yellow-400 hover:text-blue-400 text-2xl">
+        <a href="https://instagram.com/goeasey" target="_blank" rel="noopener noreferrer" class="text-yellow-400 hover:text-blue-400 text-2xl">
           <svg class="w-7 h-7" fill="currentColor" viewBox="0 0 24 24"><path d="M7.75 2h8.5A5.75 5.75 0 0 1 22 7.75v8.5A5.75 5.75 0 0 1 16.25 22h-8.5A5.75 5.75 0 0 1 2 16.25v-8.5A5.75 5.75 0 0 1 7.75 2zm0 1.5A4.25 4.25 0 0 0 3.5 7.75v8.5A4.25 4.25 0 0 0 7.75 20.5h8.5A4.25 4.25 0 0 0 20.5 16.25v-8.5A4.25 4.25 0 0 0 16.25 3.5h-8.5zm4.25 3.25a5.25 5.25 0 1 1 0 10.5a5.25 5.25 0 0 1 0-10.5zm0 1.5a3.75 3.75 0 1 0 0 7.5a3.75 3.75 0 0 0 0-7.5zm5.25.75a1 1 0 1 1-2 0a1 1 0 0 1 2 0z"/></svg>
         </a>
-        <a href="https://tiktok.com/@goeazeau" target="_blank" rel="noopener noreferrer" class="text-yellow-400 hover:text-blue-400 text-2xl">
+        <a href="https://tiktok.com/@goeasey" target="_blank" rel="noopener noreferrer" class="text-yellow-400 hover:text-blue-400 text-2xl">
           <svg class="w-7 h-7" fill="currentColor" viewBox="0 0 24 24"><path d="M12.5 2h2.25a.75.75 0 0 1 .75.75v2.5a.75.75 0 0 0 .75.75h2.5a.75.75 0 0 1 .75.75v2.25a7.25 7.25 0 1 1-7.25-7.25z"/></svg>
         </a>
         <a href="https://www.youtube.com/@GoEasey" target="_blank" rel="noopener noreferrer" class="text-yellow-400 hover:text-blue-400 text-2xl">
@@ -302,6 +292,24 @@
         </div>
       </div>
     </footer>
+  </div>
+
+  <!-- Transport Modal -->
+  <div id="transportModal" class="fixed inset-0 bg-black bg-opacity-60 flex items-center justify-center z-50 hide">
+    <div class="bg-blue-900 rounded-2xl shadow-2xl p-8 max-w-md w-full relative">
+      <button id="closeTransportModal" class="absolute top-3 right-3 text-yellow-400 text-2xl font-bold">&times;</button>
+      <h3 class="text-2xl font-bold text-yellow-400 mb-4">State Transport Cards</h3>
+      <ul class="text-blue-100 text-base space-y-2">
+        <li><a href="https://transportnsw.info/tickets-opal/opal" target="_blank" class="text-yellow-400 hover:underline font-semibold">NSW (Sydney, Newcastle, etc.) → Opal Card</a></li>
+        <li><a href="https://www.ptv.vic.gov.au/tickets/myki/" target="_blank" class="text-yellow-400 hover:underline font-semibold">VIC (Melbourne) → Myki Card</a></li>
+        <li><a href="https://translink.com.au/tickets-and-fares/go-card" target="_blank" class="text-yellow-400 hover:underline font-semibold">QLD (Brisbane, Gold Coast, Sunshine Coast) → Go Card</a></li>
+        <li><a href="https://www.adelaidemetro.com.au/Tickets-Fares/MetroCARD" target="_blank" class="text-yellow-400 hover:underline font-semibold">SA (Adelaide) → MetroCARD</a></li>
+        <li><a href="https://www.transperth.wa.gov.au/smartrider" target="_blank" class="text-yellow-400 hover:underline font-semibold">WA (Perth) → SmartRider</a></li>
+        <li><a href="https://www.metrotas.com.au/fares/greencard/" target="_blank" class="text-yellow-400 hover:underline font-semibold">TAS (Hobart, Launceston) → Greencard</a></li>
+        <li><a href="https://www.transport.act.gov.au/tickets-and-myway/myway-cards" target="_blank" class="text-yellow-400 hover:underline font-semibold">ACT (Canberra) → MyWay Card</a></li>
+        <li><a href="https://nt.gov.au/driving/public-transport-cycling/bus-tickets-and-fares/tap-and-ride" target="_blank" class="text-yellow-400 hover:underline font-semibold">NT (Darwin) → Tap and Ride</a></li>
+      </ul>
+    </div>
   </div>
 
   <script>
@@ -396,6 +404,19 @@
     }
     window.addEventListener('scroll', updateProgressBar);
     window.addEventListener('DOMContentLoaded', updateProgressBar);
+    // Transport Card Modal logic
+    var transportBtn = document.getElementById('transportCardBtn');
+    var transportModal = document.getElementById('transportModal');
+    var closeTransportModal = document.getElementById('closeTransportModal');
+    transportBtn.addEventListener('click', function() {
+      transportModal.classList.remove('hide');
+    });
+    closeTransportModal.addEventListener('click', function() {
+      transportModal.classList.add('hide');
+    });
+    transportModal.addEventListener('click', function(e) {
+      if (e.target === transportModal) transportModal.classList.add('hide');
+    });
   </script>
   <!--
     =============================
