--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
         <input type="text" name="name" id="contactName" placeholder="Name" class="border border-gray-700 bg-blue-900 bg-opacity-40 rounded-lg px-4 py-3 focus:outline-none focus:ring-2 focus:ring-yellow-400 text-lg text-white placeholder-blue-200" required />
         <input type="email" name="email" placeholder="Email" class="border border-gray-700 bg-blue-900 bg-opacity-40 rounded-lg px-4 py-3 focus:outline-none focus:ring-2 focus:ring-yellow-400 text-lg text-white placeholder-blue-200" required />
         <textarea name="message" id="contactMessage" placeholder="Message" rows="4" minlength="10" class="border border-gray-700 bg-blue-900 bg-opacity-40 rounded-lg px-4 py-3 focus:outline-none focus:ring-2 focus:ring-yellow-400 text-lg text-white placeholder-blue-200" required></textarea>
-        <input type="hidden" name="_next" value="https://goeasey.com/?contact=thanks" />
+        <input type="hidden" name="_next" value="https://goeasey.vercel.app/?contact=thanks" />
         <button type="submit" class="bg-yellow-400 hover:bg-yellow-500 text-blue-900 font-bold py-3 px-8 rounded-full shadow-lg transition-transform transform hover:scale-105 focus:outline-none focus:ring-2 focus:ring-yellow-300 text-lg">
           Send Message
         </button>
