--- a/index.html
+++ b/index.html
@@ -105,6 +105,8 @@
       margin: 2rem auto 0 auto; width: fit-content;
       animation: popIn 0.8s cubic-bezier(.22,1,.36,1);
     }
+    @keyframes bounceIn { 0% { transform: scale(0.7); opacity: 0; } 80% { transform: scale(1.08); opacity: 1; } 100% { transform: scale(1); } }
+    .animate-bounceIn { animation: bounceIn 0.7s cubic-bezier(.22,1,.36,1); }
   </style>
 </head>
 <body class="text-gray-100">
@@ -261,9 +263,29 @@
           Send Message
         </button>
       </form>
+      <!-- Thank You Modal -->
+      <div id="thankYouModal" class="fixed inset-0 flex items-center justify-center z-50 bg-black bg-opacity-60 hide">
+        <div class="glass rounded-2xl shadow-2xl p-8 max-w-md w-full text-center border-2 border-yellow-400 relative animate-bounceIn">
+          <button id="closeThankYouModal" class="absolute top-3 right-3 text-yellow-400 text-2xl font-bold">&times;</button>
+          <div class="text-3xl font-bold text-yellow-400 mb-2 brand-heading">Thank You<span id="thankYouName"></span>!</div>
+          <div class="text-blue-100 text-lg mb-4">We’ve received your message and will get back to you soon.<br><span class="text-yellow-400 font-semibold">Chill. Settle. Succeed. 🧊</span></div>
+          <div class="mt-2 text-blue-300 text-sm">You can close this window or continue browsing GoEasey.</div>
+        </div>
+      </div>
       <script>
         // Enhanced contact form: spam protection + custom thank you
         var contactForm = document.getElementById('contactForm');
+        var thankYouModal = document.getElementById('thankYouModal');
+        var thankYouName = document.getElementById('thankYouName');
+        var closeThankYouModal = document.getElementById('closeThankYouModal');
+        function showThankYou(name) {
+          if (thankYouName) thankYouName.textContent = name ? ', ' + name : '';
+          if (thankYouModal) thankYouModal.classList.remove('hide');
+        }
+        if (closeThankYouModal && thankYouModal) {
+          closeThankYouModal.onclick = function() { thankYouModal.classList.add('hide'); };
+          thankYouModal.onclick = function(e) { if (e.target === thankYouModal) thankYouModal.classList.add('hide'); };
+        }
         if (contactForm) {
           contactForm.addEventListener('submit', function(e) {
             var honey = contactForm.querySelector('input[name="_honey"]').value;
@@ -279,19 +301,15 @@
               e.preventDefault();
               return false;
             }
-            // Show custom thank you, then allow submit
+            // Show custom thank you modal, then allow submit
             e.preventDefault();
-            setTimeout(function() {
-              alert('Thank you, ' + (name ? name : 'friend') + '! We have received your message.');
-              contactForm.submit();
-            }, 200);
+            showThankYou(name);
+            setTimeout(function() { contactForm.submit(); }, 1200);
           });
         }
-        // Show thank you if redirected (fallback)
+        // Show thank you if redirected (fallback, no name)
         if (window.location.search.includes('contact=thanks')) {
-          setTimeout(function() {
-            alert('Thank you for contacting GoEasey! We have received your message.');
-          }, 400);
+          setTimeout(function() { showThankYou(''); }, 400);
         }
       </script>
       <div class="flex justify-center space-x-6 mt-8">
