--- a/index.html
+++ b/index.html
@@ -324,30 +324,6 @@
         </a>
       </div>
     </section>
-    <section id="tips" class="py-16 px-4 max-w-3xl mx-auto fade-in">
-      <h2 class="text-3xl font-bold text-yellow-400 mb-4 text-center brand-heading">Student Tips</h2>
-      <p class="text-blue-200 text-center mb-6">Share your best tips for new students! Approved tips will appear below for everyone to see.</p>
-      <!-- Submit a Tip Form -->
-      <form id="tipForm" action="https://formsubmit.co/letsgoeasey@gmail.com" method="POST" class="glass rounded-2xl shadow-inner p-8 flex flex-col space-y-4 pop-in mb-8">
-        <input type="text" name="_honey" style="display:none" tabindex="-1" autocomplete="off">
-        <input type="text" name="tipName" id="tipName" placeholder="Your Name (optional)" class="border border-gray-700 bg-blue-900 bg-opacity-40 rounded-lg px-4 py-3 text-lg text-white placeholder-blue-200" />
-        <textarea name="tipText" id="tipText" placeholder="Your Tip (min 20 characters)" rows="3" minlength="20" class="border border-gray-700 bg-blue-900 bg-opacity-40 rounded-lg px-4 py-3 text-lg text-white placeholder-blue-200" required></textarea>
-        <input type="hidden" name="_subject" value="New GoEasey Student Tip" />
-        <input type="hidden" name="_next" value="https://goeasey.vercel.app/?tip=thanks" />
-        <button type="submit" class="bg-yellow-400 hover:bg-yellow-500 text-blue-900 font-bold py-3 px-8 rounded-full shadow-lg text-lg transition-transform transform hover:scale-105">Submit Tip</button>
-      </form>
-      <!-- Thank You Modal for Tips -->
-      <div id="tipThankYouModal" class="fixed inset-0 flex items-center justify-center z-50 bg-black bg-opacity-60 hide">
-        <div class="glass rounded-2xl shadow-2xl p-8 max-w-md w-full text-center border-2 border-yellow-400 relative animate-bounceIn">
-          <button id="closeTipThankYouModal" class="absolute top-3 right-3 text-yellow-400 text-2xl font-bold">&times;</button>
-          <div class="text-3xl font-bold text-yellow-400 mb-2 brand-heading">Thank You!</div>
-          <div class="text-blue-100 text-lg mb-4">Your tip has been submitted for review.<br><span class="text-yellow-400 font-semibold">Chill. Settle. Succeed. 🧊</span></div>
-          <div class="mt-2 text-blue-300 text-sm">You can close this window or continue browsing GoEasey.</div>
-        </div>
-      </div>
-      <!-- Tips Display -->
-      <div id="tipsList" class="grid grid-cols-1 gap-6 mt-8"></div>
-    </section>
     <footer class="bg-blue-900 text-blue-100 py-6 mt-12">
       <div class="max-w-5xl mx-auto flex flex-col md:flex-row items-center justify-between px-4">
         <span class="font-semibold">© <span id="year"></span> GoEasey. All rights reserved.</span>
@@ -377,6 +353,40 @@
         <li><a href="https://www.transport.act.gov.au/tickets-and-myway/myway-cards" target="_blank" class="text-yellow-400 hover:underline font-semibold">ACT (Canberra) → MyWay Card</a></li>
         <li><a href="https://nt.gov.au/driving/public-transport-cycling/bus-tickets-and-fares/tap-and-ride" target="_blank" class="text-yellow-400 hover:underline font-semibold">NT (Darwin) → Tap and Ride</a></li>
       </ul>
+    </div>
+  </div>
+
+  <!-- Floating Tips Button -->
+  <button id="openTipsModal" class="fixed bottom-8 right-8 z-50 bg-yellow-400 text-blue-900 font-bold rounded-full shadow-xl p-4 flex items-center gap-2 hover:bg-yellow-500 transition-transform transform hover:scale-110">
+    <svg class="w-7 h-7" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" d="M13 16h-1v-4h-1m1-4h.01M12 20a8 8 0 100-16 8 8 0 000 16z"/></svg>
+    Tips
+  </button>
+  <!-- Tips Modal -->
+  <div id="tipsModal" class="fixed inset-0 flex items-center justify-center z-50 bg-black bg-opacity-60 hide">
+    <div class="glass rounded-2xl shadow-2xl p-8 max-w-2xl w-full relative animate-bounceIn">
+      <button id="closeTipsModal" class="absolute top-3 right-3 text-yellow-400 text-2xl font-bold">&times;</button>
+      <h2 class="text-3xl font-bold text-yellow-400 mb-2 text-center brand-heading">Student Tips</h2>
+      <p class="text-blue-200 text-center mb-6">Share your best tips for new students! Approved tips will appear below for everyone to see.</p>
+      <!-- Submit a Tip Form -->
+      <form id="tipForm" action="https://formsubmit.co/letsgoeasey@gmail.com" method="POST" class="glass rounded-2xl shadow-inner p-6 flex flex-col space-y-4 pop-in mb-8">
+        <input type="text" name="_honey" style="display:none" tabindex="-1" autocomplete="off">
+        <input type="text" name="tipName" id="tipName" placeholder="Your Name (optional)" class="border border-gray-700 bg-blue-900 bg-opacity-40 rounded-lg px-4 py-3 text-lg text-white placeholder-blue-200" />
+        <textarea name="tipText" id="tipText" placeholder="Your Tip (min 20 characters)" rows="3" minlength="20" class="border border-gray-700 bg-blue-900 bg-opacity-40 rounded-lg px-4 py-3 text-lg text-white placeholder-blue-200" required></textarea>
+        <input type="hidden" name="_subject" value="New GoEasey Student Tip" />
+        <input type="hidden" name="_next" value="https://goeasey.vercel.app/?tip=thanks" />
+        <button type="submit" class="bg-yellow-400 hover:bg-yellow-500 text-blue-900 font-bold py-3 px-8 rounded-full shadow-lg text-lg transition-transform transform hover:scale-105">Submit Tip</button>
+      </form>
+      <!-- Thank You Modal for Tips -->
+      <div id="tipThankYouModal" class="fixed inset-0 flex items-center justify-center z-50 bg-black bg-opacity-60 hide">
+        <div class="glass rounded-2xl shadow-2xl p-8 max-w-md w-full text-center border-2 border-yellow-400 relative animate-bounceIn">
+          <button id="closeTipThankYouModal" class="absolute top-3 right-3 text-yellow-400 text-2xl font-bold">&times;</button>
+          <div class="text-3xl font-bold text-yellow-400 mb-2 brand-heading">Thank You!</div>
+          <div class="text-blue-100 text-lg mb-4">Your tip has been submitted for review.<br><span class="text-yellow-400 font-semibold">Chill. Settle. Succeed. 🧊</span></div>
+          <div class="mt-2 text-blue-300 text-sm">You can close this window or continue browsing GoEasey.</div>
+        </div>
+      </div>
+      <!-- Tips Display -->
+      <div id="tipsList" class="grid grid-cols-1 gap-6 mt-8"></div>
     </div>
   </div>
 
@@ -574,6 +584,29 @@ if (tipForm) {
 // Show thank you if redirected (fallback)
 if (window.location.search.includes('tip=thanks')) {
   setTimeout(function() { showTipThankYou(); }, 400);
+}
+// --- Tips Modal Logic ---
+const openTipsModal = document.getElementById('openTipsModal');
+const tipsModal = document.getElementById('tipsModal');
+const closeTipsModal = document.getElementById('closeTipsModal');
+if (openTipsModal && tipsModal) {
+  openTipsModal.onclick = function() { tipsModal.classList.remove('hide'); };
+}
+if (closeTipsModal && tipsModal) {
+  closeTipsModal.onclick = function() { tipsModal.classList.add('hide'); };
+  tipsModal.onclick = function(e) { if (e.target === tipsModal) tipsModal.classList.add('hide'); };
+}
+// --- Contact Thank You Modal: Only show once ---
+if (window.location.search.includes('contact=thanks')) {
+  setTimeout(function() {
+    showThankYou('');
+    // Remove ?contact=thanks from URL so modal only shows once
+    if (window.history.replaceState) {
+      const url = new URL(window.location);
+      url.searchParams.delete('contact');
+      window.history.replaceState({}, document.title, url.pathname + url.search);
+    }
+  }, 400);
 }
 </script>
 </body>
