--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
     <h2 class="text-3xl font-bold text-yellow-400 mb-4 text-center brand-heading">Student Tips</h2>
     <p class="text-blue-200 text-center mb-6">Share your best tips for new students! Approved tips will appear below for everyone to see.</p>
     <div class="glass rounded-2xl shadow-2xl p-6 mb-8 flex flex-col items-center relative">
-      <div id="tipCarousel" class="grid grid-cols-1 gap-6 mt-2 w-full"></div>
+      <div id="tipCarousel" class="w-full flex flex-col items-center min-h-[120px]"></div>
       <div class="flex justify-center mt-6">
         <button id="tipPrev" class="text-yellow-400 hover:text-blue-400 text-2xl mr-4">←</button>
         <button id="tipNext" class="text-yellow-400 hover:text-blue-400 text-2xl">→</button>
