Update About section with personal migration story and TL;DR

--- a/index.html
+++ b/index.html
@@ -174,7 +174,19 @@
         <img src="https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=400&q=80" alt="Founder" class="w-32 h-32 rounded-full border-4 border-blue-800 mb-4 md:mb-0 glass pop-in" />
         <div>
           <h3 class="text-xl font-semibold text-blue-200 mb-2 brand-heading">My Story</h3>
-          <p class="text-blue-200">Hi, I’m Dinesh, the founder of GoEasey. As a former international student, I know how overwhelming Day 1 in Australia can be. I created GoEasey to help you feel at home, faster.<br><br>Coming from Nepal, I faced the same confusion and excitement as many new students. I wanted to make the journey easier for others by providing a kit that covers the real needs of students from Day 1. My motivation is to help you skip the stress, settle in quickly, and focus on your dreams. If I could do it, so can you—let’s make your Aussie adventure smooth and memorable!</p>
+          <p class="text-blue-200 mb-4">When I first came to Australia as a student, I thought I was ready. I packed my bags, watched videos, did my research. But once I landed, everything felt different.<br><br>
+          It was my first international trip. I was alone the whole way through immigration and transit. My baggage didn’t arrive. The airport Wi-Fi barely worked on my old phone. I stood there tired and confused.<br><br>
+          Luckily, my sister Ganga and brother-in-law Pawan were waiting to pick me up. They helped me settle in, and I’ll always be grateful. But I know not everyone is that lucky. Some of my friends landed with no one waiting, just a few messages from distant relatives.<br><br>
+          Even the small things felt big. Getting a SIM, tapping on the bus, opening a bank account, buying a power adapter. Everything took time and energy I didn’t expect.<br><br>
+          Now I feel more settled. I’ve worked jobs, made friends, and found people I trust. I feel responsible to help others starting the same journey.<br><br>
+          That’s why I created GoEasey.<br><br>
+          Not to build a big business. Just to make your first few days a little easier.<br><br>
+          If this kit gives you comfort, saves you stress, or simply helps you feel less alone — that’s all it needs to do.<br><br>
+          From one international student to another, welcome to your new chapter.</p>
+          <div class="mt-4 p-4 bg-blue-900 bg-opacity-60 rounded-xl text-blue-100 text-sm">
+            <span class="font-bold text-yellow-400">TL;DR</span><br>
+            I came to Australia alone, confused, and overwhelmed. GoEasey is my way of helping students like me feel less lost when they land. This kit is small, but it makes a big difference.
+          </div>
         </div>
       </div>
     </section>
