Add personal intro with name to About section

--- a/index.html
+++ b/index.html
@@ -174,7 +174,8 @@
         <img src="https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=400&q=80" alt="Founder" class="w-32 h-32 rounded-full border-4 border-blue-800 mb-4 md:mb-0 glass pop-in" />
         <div>
           <h3 class="text-xl font-semibold text-blue-200 mb-2 brand-heading">My Story</h3>
-          <p class="text-blue-200 mb-4">When I first came to Australia as a student, I thought I was ready. I packed my bags, watched videos, did my research. But once I landed, everything felt different.<br><br>
+          <p class="text-blue-200 mb-4"><span class="font-bold text-yellow-400">Hello, I am Dinesh Digbijay, an international student currently in Sydney.</span><br><br>
+          When I first came to Australia as a student, I thought I was ready. I packed my bags, watched videos, did my research. But once I landed, everything felt different.<br><br>
           It was my first international trip. I was alone the whole way through immigration and transit. My baggage didn’t arrive. The airport Wi-Fi barely worked on my old phone. I stood there tired and confused.<br><br>
           Luckily, my sister Ganga and brother-in-law Pawan were waiting to pick me up. They helped me settle in, and I’ll always be grateful. But I know not everyone is that lucky. Some of my friends landed with no one waiting, just a few messages from distant relatives.<br><br>
           Even the small things felt big. Getting a SIM, tapping on the bus, opening a bank account, buying a power adapter. Everything took time and energy I didn’t expect.<br><br>
