--- a/index.html
+++ b/index.html
@@ -171,7 +171,9 @@
     <section id="about" class="max-w-4xl mx-auto py-16 px-4 fade-in">
       <h2 class="text-3xl font-bold text-yellow-400 mb-4 brand-heading">About GoEasey</h2>
       <div class="flex flex-col md:flex-row items-center md:space-x-8">
-        <img src="dinesh-profile.jpg" alt="Dinesh Digbijay, founder of GoEasey, in Sydney" class="w-32 h-32 rounded-full border-4 border-blue-800 mb-4 md:mb-0 glass pop-in object-cover" />
+        <div class="w-32 h-32 rounded-full border-4 border-blue-800 mb-4 md:mb-0 glass pop-in bg-blue-900 flex items-center justify-center overflow-hidden">
+          <img src="dinesh-profile.jpg" alt="Dinesh Digbijay, founder of GoEasey, in Sydney" class="w-full h-full object-cover rounded-full" style="background: #1e3a5c;" onerror="this.style.display='none'" />
+        </div>
         <div>
           <h3 class="text-xl font-semibold text-blue-200 mb-2 brand-heading">My Story</h3>
           <p class="text-blue-200 mb-4"><span class="font-bold text-yellow-400">Hello, I am Dinesh Digbijay, an international student currently in Sydney.</span><br><br>
